Always relayout children of LayoutView when printing.

We can normally trust UpdateLogicalWidth() to detect and report size changes,
but this is not the case when printing, because
FrameView::ForceLayoutForPagination() changes the logical width of the
LayoutView behind our back.

BUG=702778

Review-Url: https://codereview.chromium.org/2908503003
Cr-Commit-Position: refs/heads/master@{#475862}

Former-commit-id: 7d39380b14728b8debd8bcc73672ff778018f63e